# rag-qna-01-unstructured-single

./: .env.example  .gitignore  README.md  pyproject.toml
src/: ingest.py  main.py  pipeline.py
